--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run Git Probe
         run: python git_probe.py
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           OPENAI_API_BASE: ${{ secrets.OPENAI_API_BASE }}
           OPENAI_MODEL: ${{ secrets.OPENAI_MODEL }}
