--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -34,8 +34,10 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
-          git add README.md history/ summaries/
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add README.md history/
           git commit -m "Update changes for $(date +'%Y-%m-%d')" || echo "No changes to commit"
-          git push 
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
