--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   probe:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -38,6 +40,6 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add README.md history/
           git commit -m "Update changes for $(date +'%Y-%m-%d')" || echo "No changes to commit"
-          git push
+          git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
