Add awesome-llm-apps repository to probe.yaml with URL and paths

--- a/yaml/probe.yaml
+++ b/yaml/probe.yaml
@@ -1,4 +1,9 @@
 repositories:
+  awesome-llm-apps:
+    url: https://github.com/Shubhamsaboo/awesome-llm-apps
+    branch: main
+    paths:
+      - README.md
   awesome-gpt4o-images:
     url: https://github.com/jamez-bondos/awesome-gpt4o-images
     branch: main
